@@ -2,6 +2,11 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2023-05-15:
+
+- Fixed a crash on executing a nested compound assignment in a command
+  substitution.
+
 2023-05-14:
 
 - If history expansion is active, then command and file name completion now
